--- a/EjemploListaDinamica/app/src/main/res/layout/filas2.xml
+++ b/EjemploListaDinamica/app/src/main/res/layout/filas2.xml
@@ -4,11 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
-    <ImageView
-        android:id="@+id/icon"
-        android:padding="2dip"
+
+    <TextView
+        android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        />
+        android:textSize="24sp" />
 </LinearLayout>
