--- a/EjemploListaDinamica/app/src/main/res/layout/filas.xml
+++ b/EjemploListaDinamica/app/src/main/res/layout/filas.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
+    android:background="@android:color/background_light"
+    android:gravity="center"
+    android:orientation="horizontal">
+
     <ImageView
         android:id="@+id/icon"
-        android:padding="2dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        />
+        android:layout_gravity="center"
+        android:padding="2dip" />
 </LinearLayout>
