--- a/EjemploListaDinamica/app/src/main/res/layout/filas2.xml
+++ b/EjemploListaDinamica/app/src/main/res/layout/filas2.xml
@@ -3,11 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    >
+    android:textAlignment="center">
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="prueba"
+        android:gravity="center"
         android:textSize="24sp" />
 </LinearLayout>
