--- a/IntentsEj5Galeria/app/src/main/res/layout/activity_main.xml
+++ b/IntentsEj5Galeria/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,33 @@
     tools:context=".MainActivity">
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/visor"
         android:layout_width="395dp"
-        android:layout_height="456dp"
+        android:layout_height="458dp"
         android:layout_marginStart="7dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="7dp"
-        android:layout_marginBottom="227dp"
+        android:layout_marginBottom="188dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/bHacerFoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Hacer Foto"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.863" />
 </android.support.constraint.ConstraintLayout>
