--- a/EjemploLogin/app/src/main/res/layout-v26/activity_main.xml
+++ b/EjemploLogin/app/src/main/res/layout-v26/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/btnlog"
-        android:text="Log In"
+        android:text="@string/log_in"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,33 +39,37 @@
 
     <EditText
         android:id="@+id/tbxmail"
-        android:focusedByDefault="false"
-        android:layout_width="wrap_content"
-        android:layout_height="52dp"
+        android:layout_width="332dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="404dp"
+        android:layout_marginTop="388dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/btnpass"
         android:ems="10"
+        android:focusedByDefault="false"
+        android:hint="@string/e_mail"
         android:inputType="textPersonName"
-        android:paddingStart="50dp"
+        android:paddingStart="45dp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tbxpass"
-        android:layout_width="wrap_content"
-        android:layout_height="52dp"
+        android:layout_width="332dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/btnpass"
         android:ems="10"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingStart="50dp"
+        android:paddingStart="45dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,8 +78,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="281dp"
-        android:layout_height="208dp"
+        android:layout_width="254dp"
+        android:layout_height="188dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -115,7 +119,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.575"
+        app:layout_constraintVertical_bias="0.45"
         app:srcCompat="@drawable/title" />
 
     <ImageView
@@ -126,9 +130,10 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/tbxpass"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tbxpass"
+        app:layout_constraintVertical_bias="0.432"
         app:srcCompat="@drawable/lock" />
 
     <ImageView
@@ -139,26 +144,26 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/tbxmail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tbxmail"
+        app:layout_constraintVertical_bias="0.459"
         app:srcCompat="@drawable/user" />
 
     <Button
         android:id="@+id/btnsignup"
         android:layout_width="212dp"
-        android:layout_height="32dp"
+        android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/signup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />
 
 
 
