--- a/EjemploLogin/app/src/main/res/layout/activity_sign_up.xml
+++ b/EjemploLogin/app/src/main/res/layout/activity_sign_up.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/loginbg"
-    tools:context=".MainActivity">
+    tools:context=".SignUp">
 
     <Button
-        android:id="@+id/btnlogin"
+        android:id="@+id/btnsignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="564dp"
+        android:layout_marginTop="571dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/btnlog"
-        android:text="@string/log_in"
+        android:text="@string/sign_up"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_width="332dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="368dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/btnpass"
         android:ems="10"
@@ -57,13 +57,32 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/tbxUser"
+        android:layout_width="332dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/btnpass"
+        android:ems="10"
+        android:focusedByDefault="false"
+        android:hint="@string/e_mail"
+        android:inputType="textPersonName"
+        android:paddingStart="45dp"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbxuser" />
+
+    <EditText
         android:id="@+id/tbxpass"
         android:layout_width="332dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="180dp"
         android:background="@drawable/btnpass"
         android:ems="10"
         android:hint="@string/password"
@@ -72,9 +91,10 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbxuser"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintTop_toBottomOf="@+id/tbxUser"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -150,22 +170,33 @@
         app:layout_constraintVertical_bias="0.459"
         app:srcCompat="@drawable/user" />
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="26dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tbxUser"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tbxUser"
+        app:layout_constraintVertical_bias="0.459"
+        app:srcCompat="@drawable/at" />
+
     <Button
-        android:id="@+id/btnnoacc"
+        android:id="@+id/btnhaveacc"
         android:layout_width="212dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/signup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.956" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/btnnoacc" />
 
 </android.support.constraint.ConstraintLayout>
