--- a/PracticaFinal/app/src/main/res/layout/main_fragment.xml
+++ b/PracticaFinal/app/src/main/res/layout/main_fragment.xml
@@ -8,8 +8,13 @@
     tools:context=".ui.main.MainFragment">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="395dp"
         android:layout_height="734dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
