--- a/PracticaFinal/app/src/main/res/layout/levelcard_activity.xml
+++ b/PracticaFinal/app/src/main/res/layout/levelcard_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -11,17 +11,18 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
-        app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="#8BC34A"
+        app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/levelCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#8BC34A"
             android:gravity="center"
             android:orientation="vertical">
 
