--- a/PracticaFinal/app/src/main/res/layout/logoguesswindow_activity.xml
+++ b/PracticaFinal/app/src/main/res/layout/logoguesswindow_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -30,7 +29,7 @@
         android:numColumns="auto_fit"
         android:padding="8dp"
         android:scrollbars="none"
-        android:stretchMode="columnWidth"
+        android:stretchMode="spacingWidthUniform"
         android:verticalSpacing="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
