--- a/PracticaFinal/app/src/main/res/layout/logoguesswindow_activity.xml
+++ b/PracticaFinal/app/src/main/res/layout/logoguesswindow_activity.xml
@@ -20,24 +20,32 @@
         app:layout_constraintTop_toTopOf="@+id/guideline11"
         app:srcCompat="@drawable/amazon" />
 
-    <GridView
-        android:id="@+id/logonamegridview"
+    <RelativeLayout
+        android:id="@+id/logonamerelative"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_marginTop="8dp"
-        android:columnWidth="40dp"
-        android:gravity="center"
-        android:horizontalSpacing="8dp"
-        android:numColumns="auto_fit"
-        android:padding="8dp"
-        android:scrollbars="none"
-        android:stretchMode="spacingWidthUniform"
-        android:verticalSpacing="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline9" />
+        app:layout_constraintTop_toTopOf="@+id/guideline9"
+        android:gravity="center"
+        android:padding="4dp">
+        <GridView
+            android:id="@+id/logonamegridview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnWidth="40dp"
+            android:layout_centerInParent="true"
+            android:horizontalSpacing="8dp"
+            android:numColumns="auto_fit"
+            android:scrollbars="none"
+            android:stretchMode="spacingWidthUniform"
+            android:verticalSpacing="8dp"/>
+
+    </RelativeLayout>
+
 
     <GridView
         android:id="@+id/lettersgridview"
@@ -106,7 +114,7 @@
         android:layout_marginEnd="80dp"
         app:layout_constraintBottom_toTopOf="@+id/lettersgridview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logonamegridview"
+        app:layout_constraintTop_toBottomOf="@+id/logonamerelative"
         app:srcCompat="@drawable/delettos" />
 
     <ImageView
@@ -116,7 +124,7 @@
         android:layout_marginStart="80dp"
         app:layout_constraintBottom_toTopOf="@+id/lettersgridview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logonamegridview"
+        app:layout_constraintTop_toBottomOf="@+id/logonamerelative"
         app:srcCompat="@drawable/help" />
 
     <android.support.constraint.Guideline
